--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul>
             <li><a href="#hero" data-after="Home" >Home</a></li>
             <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#" data-after="Register">Regeister</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeo4IwCBIa8JRcKwJw-PVDnov0dV2XWOW8h6blhDwAHPEU4HQ/viewform?usp=sf_link" data-after="Register">Regeister</a></li>
           </ul>
         </div>
       </div>
